Added FAQ explaining how to increase Spark driver PermGen